added performance evaluation

--- a/commands.tex
+++ b/commands.tex
@@ -23,7 +23,7 @@
 	\newcommand{\Combine}{\mathsf{Combine}}
 	\newcommand{\Unblind}{\mathsf{Unblind}}
 	\newcommand{\BTBLS}{\mathsf{BTBLS}}
-	\newcommand{\SIG}{\mathsf{SIG}}
+	\newcommand{\SIG}{\mathsf{DSA}}
 
 
 	% Maths
