--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,12 @@
 \usepackage{tabularx}
 \usepackage{forest}
 \usepackage[bottom]{footmisc}
+\usepackage{enumitem}
+\usepackage[normalem]{ulem}
+\useunder{\uline}{\ul}{}
 % TODO add code (package minted)
 % \usepackage{minted}
+
 
 \begin{document}
 
