--- a/references.bib
+++ b/references.bib
@@ -100,6 +100,15 @@ note = {}
     note = {\url{https://eprint.iacr.org/2013/352}},
 }
 
+@article {BLSAgg,
+author = {Dan Boneh and Craig Gentry and Ben Lynn and and Hovav Shacham},
+title = {Aggregate and Verifiably Encrypted Signatures from Bilinear Maps},
+journal = {Advances in Cryptology - EUROCRYPT 2003},
+year = {2003},
+volume = {volume 2656 of LNCS},
+pages = {pp 416--432},
+note = {}
+}
 
 
 
@@ -130,8 +139,34 @@ note = {Last visited on 5 Sept. 2020}
 author = {Shigeo Mitsunari},
 title = {{MCL} benchmarks},
 howpublished = {\url{https://github.com/herumi/mcl/blob/master/bench.txt}},
-month = {June},
-year = {2020},
+month = {November},
+year = {2018},
 note = {Last visited on 5 Sept. 2020}
 }
+
+
+
+@misc {WolfSSl,
+author = {WolfSSL},
+title = {Reference BEnchmarks},
+howpublished = {\url{https://www.wolfssl.com/docs/benchmarks/}},
+month = {},
+year = {},
+note = {Retrieved online on 5 Sept. 2020}
+}
+
+
+@article{covid,
+	author = {Shental, Noam and Levy, Shlomia and Wuvshet, Vered and Skorniakov, Shosh and Shalem, Bar and Ottolenghi, Aner and Greenshpan, Yariv and Steinberg, Rachel and Edri, Avishay and Gillis, Roni and Goldhirsh, Michal and Moscovici, Khen and Sachren, Sinai and Friedman, Lilach M. and Nesher, Lior and Shemer-Avni, Yonat and Porgador, Angel and Hertz, Tomer},
+	title = {Efficient high-throughput SARS-CoV-2 testing to detect asymptomatic carriers},
+	elocation-id = {eabc5961},
+	year = {2020},
+	doi = {10.1126/sciadv.abc5961},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Recent reports suggest that 10-30\% of SARS-CoV-2 infected patients are asymptomatic and that significant viral shedding may occur prior to symptom onset. Therefore, there is an urgent need to increase diagnostic testing capabilities to prevent disease spread. We developed P-BEST - a method for Pooling-Based Efficient SARS-CoV-2 Testing which identifies all positive subjects within a large set of samples using a single round of testing. Each sample is assigned into multiple pools using a combinatorial pooling strategy based on compressed sensing designed for maximizing carrier detection. In our current study we pooled sets of 384 samples into 48 pools providing both an 8-fold increase in testing efficiency, as well as an 8-fold reduction in test costs. We successfully identified up to 5 positive carriers within sets of 384 samples. We then used P-BEST to screen 1115 healthcare workers using 144 tests. P-BEST provides an efficient and easy-to-implement solution for increasing testing capacity that can be easily integrated into diagnostic laboratories.},
+	URL = {https://advances.sciencemag.org/content/early/2020/08/20/sciadv.abc5961},
+	eprint = {https://advances.sciencemag.org/content/early/2020/08/20/sciadv.abc5961.full.pdf},
+	journal = {Science Advances}
+}
+
 
