first draft applications

--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,8 @@
 % BIBLIOGRAPHY
 \newpage
 \addcontentsline{toc}{chapter}{Bibliography}
+{\singlespacing
 \bibliographystyle{splncs03}
-\bibliography{references}
+\bibliography{references}}
 
 \end{document}
