--- a/references.bib
+++ b/references.bib
@@ -64,7 +64,14 @@ publisher = {{USENIX} Association},
 month = aug,
 }
 
-
+@inproceedings{Papadopoulos18,
+author = {Papadopoulos, Panagiotis and Chariton, Antonios and Athanasopoulos, Elias and Markatos, Evangelos},
+year = {2018},
+month = {05},
+pages = {425-430},
+title = {Where's Wally?: How to Privately Discover your Friends on the Internet},
+doi = {10.1145/3196494.3196496}
+}
 
 
 
@@ -110,6 +117,44 @@ pages = {pp 416--432},
 note = {}
 }
 
+APPLICATIONS --------------------------------------------------------------------------------------
+
+@misc {Signal:X3DH,
+author = {Moxie Marlinspike},
+title = {The {X3DH} Key agreement Protocol},
+howpublished = {\url{https://signal.org/docs/specifications/x3dh/}},
+month = {November},
+year = {2016},
+note = {Revision 1 - Retrieved online on 6 September 2020}
+}
+
+@misc {Signal:Ratchet,
+author = {Moxie Marlinspike},
+title = {The Double Ratchet Algorithm},
+howpublished = {\url{https://signal.org/docs/specifications/doubleratchet/}},
+month = {November},
+year = {2016},
+note = {Revision 1 - Retrieved online on 6 September 2020}
+}
+
+@misc {Signal:Reg,
+author = {Signal},
+title = {Register a Phone Number},
+howpublished = {\url{https://support.signal.org/hc/en-us/articles/360007318691-Register-a-phone-number}},
+month = {},
+year = {},
+note = {Retrieved online on 6 September 2020}
+}
+
+
+@misc {Celo:Doc,
+author = {Celo},
+title = {Documentation},
+howpublished = {\url{https://docs.celo.org/v/master/}},
+month = {},
+year = {},
+note = {Retrieved online on 6 September 2020}
+}
 
 
 
