first draft implementation

--- a/commands.tex
+++ b/commands.tex
@@ -1,8 +1,8 @@
 
 % ENVIRONMENTS
-\newtheorem{definition}{Definition}[chapter]
-\newtheorem{theorem}{Theorem}[chapter]
-\newtheorem{secgame}{Attack Game}[chapter]
+	\newtheorem{definition}{Definition}[chapter]
+	\newtheorem{theorem}{Theorem}[chapter]
+	\newtheorem{secgame}{Attack Game}[chapter]
 
 
 % SHORTHAND NOTATIONS
@@ -25,7 +25,6 @@
 	\newcommand{\BTBLS}{\mathsf{BTBLS}}
 	\newcommand{\SIG}{\mathsf{DSA}}
 
-
 	% Maths
 	\newcommand{\Pair}[2]{e\left(#1, #2 \right)} % Pairing operation
 	\newcommand{\Smallz}[1]{z^{(#1)}}
@@ -39,3 +38,7 @@
 	\newcommand{\acc}{\mathbf{acc}}
 	\newcommand{\addr}{\mathbf{addr}}
 	\newcommand{\contacts}[1]{\mathcal{C}_{#1}}
+	
+	% Misc
+	\newcommand{\kyber}{\texttt{kyber}}
+	
