--- a/references.bib
+++ b/references.bib
@@ -156,6 +156,16 @@ year = {},
 note = {Retrieved online on 6 September 2020}
 }
 
+@misc {Celo:Phone,
+author = {Celo},
+title = {Phone number Privacy},
+howpublished = {Celo Documnetation, \url{https://docs.celo.org/celo-codebase/protocol/identity/phone-number-privacy}},
+month = {},
+year = {},
+note = {Retrieved online 7 September 2020}
+}
+
+
 
 
 MISC ---------------------------------------------------------------------
