--- a/implementation.tex
+++ b/implementation.tex
@@ -1,8 +1,156 @@
 \chapter{Proof-of-Concept Implementation}
 \label{implementation}
 
+
+\paragraph{} In this chapter we describe a proof-of-concept implementation of the contact discovery service written in Go. At the time of writing, this proof-of-concept performs setup locally by emulating the behaviour of the distributed discovery service. Key derivation is performed locally as expected. Finally, a meeting point is established via the InterPlanetary FileSystem (IPFS)\footnote{\url{https://ipfs.io}}. It is important to highlight that the IPFS is a content-addressed system: rather than storing key-value pairs, the IPFS derives a key as a function of the value. This behaviour does not match our requirements for the online cache, but allows us to establish a meeting point and perform contact discovery nonetheless.
+
+
+
+
 \section{Local server emulation}
 
-\section{Local key derivation}
+	\paragraph{} To emulate the behaviour of our distributed discovery service, we need to create a \texttt{server} object, perform a distributed key generation (DKG) algorithm and implement BLS signatures in both source groups of an asymmetric pairing. We make use of the \kyber \;library\footnote{\url{https://github.com/dedis/kyber}} to provide most of the cryptographic backend.
+	
+	\paragraph{Server representation --} We are performing a local emulation and therefore choose to abstract from networking properties such as a server's address. We however include an \texttt{ID} field that represents any such identifying information. Consequently, our model for a server is as simple as possible: it includes an identifier, a secret key share for the BLS signature scheme in $\Gzero$ and a secret key share for the BLS signature scheme in $\Gone$ (see \autoref{fig:server_def}).
+	
+	\begin{figure}[H]
+		\begin{center}
+			\begin{lstlisting}
+	type multiServer struct {
+		ID  int
+		sk1 *share.PriShare
+		sk2 *share.PriShare
+	}
+			\end{lstlisting}
+			\caption{Implementation: definition of a server}
+			\label{fig:server_def}
+		\end{center}
+  	\end{figure}
+  	
+  	\paragraph{Distributed Key Generation --} Rather than performing a distributed key generation algorithm, we assume the existence of a trusted dealer and perform key distribution by sharing a random secret (see \autoref{fig:key_distrib}). As DKG algorithms are not the primary focus of our report, this assumption allows for a simple setup for our proof-of-concept implementation. We perform secret sharing using \kyber's \texttt{share} package.
+  	
+  	\begin{figure}[H]
+		\begin{center}
+		\begin{lstlisting}
+func setupThresholdServers(suite pairing.Suite, secret kyber.Scalar, n, t int) ([]*multiServer, *share.PubPoly, *share.PubPoly) {
+	serverList := make([]*multiServer, n)
+	if secret == nil {
+		secret = suite.GT().Scalar().Pick(random.New())
+	}
+
+	priPoly1 := share.NewPriPoly(suite.G2(), t, secret, random.New())
+	pubPoly1 := priPoly1.Commit(suite.G2().Point().Base())
+	serverPrivateKeys1 := priPoly1.Shares(n)
+
+	priPoly2 := share.NewPriPoly(suite.G1(), t, secret, random.New())
+	pubPoly2 := priPoly2.Commit(suite.G1().Point().Base())
+	serverPrivateKeys2 := priPoly2.Shares(n)
+
+	for i := 0; i < n; i++ {
+		serverList[i] = newMultiServer(i, serverPrivateKeys1[i], serverPrivateKeys2[i])
+	}
+
+	return serverList, pubPoly1, pubPoly2
+}
+		\end{lstlisting}
+	\caption{Implementation: Key distribution using a trusted dealer}
+		\label{fig:key_distrib}
+		\end{center}
+	\end{figure}
+
+  	\paragraph{Blind $(t,n)$-threshold BLS --} Finally, we implement blind $(t,n)$-threshold BLS signature schemes in both variants (with signatures in $\Gzero$ and in $\Gone$). The \kyber\;library only allows signatures in $\Gzero$ and takes messages as inputs. As such, we are unable to manipulate hashes of those messages; more specifically we are unable to blind and unblind our messages. We therefore implement a slight variant of the existing library to allow for blinding and introduce the necessary functions to performs BLS signatures on elements of $\Gone$. We do not however implement a secure hash-to-$\Gone$ as should be the case in a production-grade service.
+  	% TODO code for blind tbls
+  	
+  	\paragraph{} Using the above setup, clients are able to send their blinded discovery identifiers to any of the $n$ emulated servers (see \autoref{app:code}, \autoref{app:blindtbls}). The servers respond by providing a BLS signature using their private key shares. Users therefore receive their constraining keys as expected. We do not however implement many of the identity checks that are required to provide a secure setup.
+  	
+\section{User-facing client application}
+
+	\paragraph{Users --} We consider that each user will run an instance of our code. Users are therefore prompted to enter their discovery identifier upon first launch. This identifier is then hashed to both source groups to produce public keys \texttt{pk1} and \texttt{pk2}. Once the user completes the setup process, she will receive her left and right constraining keys. We call these the user's secret keys \texttt{sk1} ans \texttt{sk2} to emphasise the fact that both keys must remain private at all times. Users are therefore represented using the data structure shown in \autoref{fig:user_def}.
+	
+	\begin{figure}[H]
+	\begin{center}
+		\begin{lstlisting}
+			type user struct {
+				name               string
+				phoneNumber        string
+				pk1, pk2, sk1, sk2 kyber.Point
+			}
+		\end{lstlisting}
+	\caption{Implementation: definition of a user}
+	\label{fig:user_def}
+	\end{center}
+\end{figure}
+
+
+	\paragraph{User setup --} Upon launching the application, users receive a list of available servers and the setup threshold $t$. The client application performs the setup process by interacting with $t$ servers of its choice. Each interaction consists of blinding the user's public keys, verifying the received signature and unblinding it to store shares of the constraining keys. When enough shares are gathered, the client application runs the $\Combine$ algorithms from each of the two threshold BLS schemes.
+
+
+
+	\paragraph{Key derivation --} Using a user's constraining keys and a contact's discovery identifier, the client application can evaluate the left/right constrained PRF by performing two pairing operations (see \autoref{fig:key_deriv}).
+	
+	\begin{figure}[H]
+	\begin{center}
+		\begin{lstlisting}
+	// Derive shared keys between users A and B:
+	// shared12 = e(H1(idA)**s, H2(idB)) = e(H1(idA), H2(idB))**s
+	// shared21 = e(H1(idB), H2(idA)**s) = e(H1(idB), H2(idA))**s
+	func deriveSharedKeys(alice *user, contactNumber string) (kyber.Point, kyber.Point) {
+		bobPk1, bobPk2 := derivePublicKeys(contactNumber)
+		shared12 := suite.Pair(alice.sk1, bobPk2)
+		shared21 := suite.Pair(bobPk1, alice.sk2)
+	
+		return shared12, shared21
+	}
+		\end{lstlisting}
+	\caption{Implementation: local key derivation}
+	\label{fig:key_deriv}
+	\end{center}
+\end{figure}
+
+
 
 \section{Online meeting point via IPFS}
+
+	\paragraph{} The final step required to successfully perform contact discovery is to establish an online meeting point. As mentioned above, the IPFS is not originally a key-value store. We therefore a develop another approach to the discovery phase which slightly differs from that presented in \autoref{chap:system}.
+	
+	\paragraph{} The IPFS is a content-addressed storage system where the location of an object is its hash. Therefore, we modify the discovery phase such that both parties $A$ and $B$, can compute two pieces of unique, secret content $c_{AB}$ and $c_{BA}$. These are in fact ciphertexts under the symmetric key $k_{AB} = k_{BA}$ for standardised plaintexts such that both users can locally compute them. To check whether $B$ is registered to an application, $A$ can check whether $c_{BA}$ is available on the IPFS. Similarly, $B$ can check for the presence of $c_{AB}$. Notice however that we cannot encrypt information that is not shared between $A$ and $B$. Indeed, doing so would mean that one of the two parties is unable to compute the hash --- and therefore the IPFS address --- of one of the ciphertexts. As a result, this simplified method does not allow to transfer information during the contact discovery phase. Users may only receive and send binary information by uploading or withholding their ciphertexts.
+	
+	\paragraph{} The IPFS provides simple command-line tools to upload and access files from its peer-to-peer network. Using these tools, $A$ uploads $c_{AB}$ and tries to retrieve $c_{BA}$. If the file is available, $A$ knows $B$ is a registered user. Otherwise, the IPFS instruction will time out and $A$ will learn that $B$ is not registered.
+	
+	\paragraph{} This process implies that $c_{AB}$ and $c_{BA}$ must remain available on the IPFS network regardless of either users' connection status. Fortunately, the IPFS implements a ``pinning'' mechanism to ensure that files are stored by more than one node.
+
+
+\section{Results}
+
+\paragraph{} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
