--- a/main.tex
+++ b/main.tex
@@ -40,8 +40,9 @@
 \usepackage[normalem]{ulem}
 \useunder{\uline}{\ul}{}
 % TODO add code (package minted)
-% \usepackage{minted}
+%\usepackage{minted}
 
+\input{code_formatting}
 
 \begin{document}
 
@@ -73,15 +74,17 @@
 \input{system}
 \input{implementation}
 \input{conclusion}
-\input{appendices}
-\input{code}
-
 
 % BIBLIOGRAPHY
 \newpage
 \addcontentsline{toc}{chapter}{Bibliography}
-{\singlespacing
 \bibliographystyle{splncs03}
-\bibliography{references}}
+\bibliography{references}
+
+\input{appendices}
+\input{code}
+
+
+
 
 \end{document}
