--- a/litreview.tex
+++ b/litreview.tex
@@ -1,7 +1,7 @@
 \chapter{Related Work}
 \label{chap:litreview}
 
-\paragraph{} In this chapter we provide an overview of state-of-the-art methods for privacy-preserving contact discovery, as well as academic attempts at solving a similar problem. These methods can be divided according to their underlying approach: the first aims at computing the intersection between a list of registered users and an address book, the second aims at providing users with the necessary cryptographic material needed to authenticate and establish shared secrets between each other
+\paragraph{} In this chapter we provide an overview of state-of-the-art methods for privacy-preserving contact discovery, as well as academic attempts at solving a similar problem. These methods can be divided according to their underlying approach: the first aims at computing the intersection between a list of registered users and an address book, the second aims at providing users with the necessary cryptographic material needed to authenticate and establish shared secrets between each other.
 
 
 \paragraph{} In \autoref{sec:signal}, we cover Signal's approach which is to simply process each user's address book without storing her contacts \cite{Signal:Tech}. To convince users that they are trustworthy, Signal publish their code and allow users to verify what code is being run by their servers. In \autoref{sec:PSI}, we investigate cryptographic ways to perform a set intersection between two parties without either party learning the other's data. This is known as a private set intersection (PSI). The subsequent attempts fall under the second approach described above. Thus \autoref{sec:PKI} focuses on public key infrastructure and \autoref{sec:IBKE} on identity-based key exchanges.
