--- a/system.tex
+++ b/system.tex
@@ -317,21 +317,23 @@
 \section{Applications}
 \label{sec:applications}
 
-\paragraph{} To conclude this chapter on our system's architecture, we provide a brief overview of its possible integrations into existing mobile applications. We first focus on Signal, an end-to-end encrypted messaging service. We then consider the integration with a decentralised payment system such as Celo.
+\paragraph{} To conclude this chapter on our system's architecture, we provide a brief overview of its possible integrations into existing mobile applications. We first focus on Signal\footnote{\url{https://signal.org}}, an end-to-end encrypted messaging service. We then consider the integration with a decentralised payment system such as Celo\footnote{\url{https://celo.org}}.
+
+\paragraph{} It is important to note that the same infrastructure can be used for multiple applications simultaneously. Indeed, each application can be represented by a different master secret key. Let $s_X$ and $s_Y$ be the master secret keys for applications $X$ and $Y$ respectively. Users $A$ and $B$ can interact with the discovery service under both keys to derive the shared secrets $F_{s_X}(\id_A, \id_B), F_{s_X}(\id_B, \id_A)$ to perform contact discovery for application $X$ and the shared secrets $F_{s_Y}(\id_A, \id_B), F_{s_Y}(\id_B, \id_A)$ to perform contact discovery for application $Y$. However, this once again raises the question of optimisation of the server-side setup process.
 
 	\subsection{End-to-end encrypted messaging}
 	
-	\paragraph{} The Signal Protocol uses the ``X3DH'' (Extended Triple Diffie-Hellman) protocol to ``[establish] a shared secret between two parties that mutually authenticate each other'' \cite{Signal:X3DH}. Users $A$ and $B$ first exchange a set of public keys to then derive a shared secret. We can modify our discovery scheme such that the initial ciphertext left on the online cache contains the necessary public key information to perform the X3DH protocol. Following this initial key establishment, our scheme hands over key management to the Signal Protocol which implements a ``Double Ratchet'' algorithm to renew keys and protect past and future message confidentiality in the case of key leaks \cite{Signal:Ratchet}. 
+	\paragraph{} The Signal Protocol uses the ``X3DH'' (Extended Triple Diffie-Hellman) protocol to ``[establish] a shared secret between two parties that mutually authenticate each other'' \cite{Signal:X3DH}. Users $A$ and $B$ first exchange a set of public keys to then derive a shared secret. We can modify our discovery scheme such that the initial ciphertext left on the online cache contains the necessary public key information to perform the X3DH protocol. As the meeting point and encryption key are known only to $A$ and $B$, our scheme provides mutual authentication. Following this initial key establishment, the Signal Protocol can be followed as expected normally. This allows features such as the ``Double Ratchet'' algorithm to be used to provide secrecy to past and future messages in the event of a key leak \cite{Signal:Ratchet}. Such features allow to isolate the end-to-end encrypted channel from faults in the discovery scheme.
 	
-	\paragraph{} Signal also performs a phone number registration step which makes use out-of-bound verification \cite{Signal:Reg}. This step is less documented, however its existence implies that Signal is able to issue identification tokens to its users, thus protecting our scheme from impersonation attacks. 
+	\paragraph{} Signal also performs a phone number registration step which makes use of out-of-bound verification \cite{Signal:Reg}. This step is less documented, however its existence implies that Signal is able to issue identification tokens to its users, thus protecting our scheme from impersonation attacks. 
 	
 	\subsection{Mobile-first cryptocurrencies}
 	
 	\paragraph{} Celo is a decentralised payment system based on a blockchain architecture. Users can therefore send and receive transactions using account addresses - a 30+ character hexadecimal string. As Celo aims to bring fast payment systems to ``anyone with a smartphone'' \cite{Celo:Doc}, they provide a service which allows users to ignore these complex addresses and use phone numbers instead. This setting naturally maps to our contact discovery scheme (phone number as a discovery identifier linked to the Celo-provided secret key, public key and address).
 	
-	\paragraph{} Through its blockchain and the validators that run it during a given epoch, Celo offers a decentralised phone number attestation service. Once a user proves they own a phone number, a salted hash of the number and the associated Celo account are committed to the blockchain. Users can discover each other by issuing oblivious, rate-limited requests for a user's salt to then check the on-chain phone number attestation records.	
+	\paragraph{} Through its blockchain and the validators that run it during a given epoch, Celo offers a decentralised phone number attestation service \cite{Celo:Phone}. Once a user proves they own a phone number, a salted hash of the number and the associated Celo account are committed to the blockchain. Users can discover each other by issuing oblivious, rate-limited requests for a user's salt to then check the on-chain phone number attestation records.	
 	
-	\paragraph{} Instead, Celo could provide stronger privacy guarantees by issuing identification tokens through its attestation process and delegating the contact discovery process. Our contact discovery service could then use the public keys associated to the combined secret key of the validators of a given epoch to verify these tokens. As this authentication step prevents impersonation attacks, our scheme can then run as described in this chapter. Doing so allows to securely link phone numbers to account addresses without committing this data to a public blockchain.
+	\paragraph{} Instead, Celo could provide stronger privacy guarantees by issuing private identification tokens through its attestation system and delegating the contact discovery process. Our contact discovery service could then use the public keys associated to the combined secret key of the validators of a given epoch to verify these tokens. As this authentication step prevents impersonation attacks, our scheme can then run as described in this chapter. Doing so allows to securely link phone numbers to account addresses without committing this data to a public blockchain.
 	
 	
 	
