added performance evaluation calculations code

--- a/appendices.tex
+++ b/appendices.tex
@@ -62,6 +62,8 @@
 
 \chapter{Calculations: performance evaluation}
 
+\lstset{captionpos=t}
+\lstinputlisting[language=Python, caption={perf\_eval.py}]{perf_eval.py}
 
 
 % TODO jupyter notebook
